[project]
name = "learn-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.23",
    "langchain-core>=0.3.51",
    "langchain-groq>=0.3.2",
    "langchain-nvidia-ai-endpoints>=0.3.9",
    "langgraph>=0.3.30",
    "langgraph-cli[inmem]>=0.2.3",
    "mcp>=1.6.0",
    "pip>=25.0.1",
]
